Remove unnecessary float:left from .ui-menu-item, only caused various layout issues

--- a/themes/base/jquery.ui.menu.css
+++ b/themes/base/jquery.ui.menu.css
@@ -13,8 +13,6 @@
 	margin:0;
 	padding: 0;
 	zoom: 1;
-	float: left;
-	clear: left;
 	width: 100%;
 }
 .ui-menu .ui-menu-item a {
